--- a/style.css
+++ b/style.css
@@ -74,26 +74,32 @@ li {
 @media (max-width: 960px) {
   /* For a screen < 960px, this CSS will be read */
   .container {
-    width: 700px;
-    margin: 35px 20vw;
+    width: 540px;
   }
 }
 @media (max-width: 720px) {
   /* For a screen < 720px, this CSS will be read */
   .container {
-    width: 500px;
-    margin: 35px 20vw;
+    width: 432px;
   }
 }
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 350px;
-    margin: 35px 15px;
+    width: 320px;
   }
+
   .profile-pic {
-    border-radius: 50%;
-    max-width: 100px;
-    max-height: 100px;
+  }
+}
+
+@media (max-width: 360px) {
+  /* For a screen < 540px, this CSS will be read */
+  .container {
+    width: 216px;
+  }
+
+  .profile-pic {
+    max-width: 150px;
   }
 }
